# exchange-aggregator

./: .gitignore  Cargo.toml  README.md  local.env
src/: main.rs
src/config/: mod.rs
src/db/: init.sh  mod.rs
src/db/migrations/: migrate_to_v1.lua
src/exchange/: mod.rs  parser.rs
src/rest_client/: mod.rs
