[package]
name = "exchange-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
tarantool = "0.8
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
chrono = "0.4"
rusqlite = "0.29"
once_cell = "1.0"

[dev-dependencies]